--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -7,3 +7,9 @@
     padding: 25px;
     margin-top: 5rem;
   }
+  .close-icon {
+    position: absolute;
+    right: 30rem;
+    top: 90px;
+    cursor: pointer;
+  }
